--- a/src/App.css
+++ b/src/App.css
@@ -7,24 +7,28 @@ font-family: 'Raleway', sans-serif;
 }
 
 
-
 .App{
   display: flex;
   height: 100vh;
   width: 100vw;
   flex-direction: column;
-  justify-content: center;
+   justify-content: center;
   align-items: center;
-  background-color: rgb(123, 45, 69);
+  transition-duration: 500ms;
+  transition-delay: 200ms;
+
 }
 .wrapper{
   width: 550px;
   height: auto;
   background-color: white;
+  padding: 40px 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  transition-duration: 500ms;
+  transition-delay: 200ms;
 }
 
 .quoteDiv{
@@ -34,10 +38,73 @@ font-family: 'Raleway', sans-serif;
   align-items: center;
   width: 450px;
   height: auto;
- 
+  transition-duration: 500ms;
+  transition-delay: 200ms;
+  margin-bottom: 3px;
 
 }
 .hOne{
   text-align: center;
   font-weight: 400;
+  transition: all;
+  transition-duration: 600ms;
+  
 }
+.buttonDiv{
+  display: flex;
+  width: 100%;
+  height: 38px;
+  align-items: center;
+  flex-wrap: nowrap;
+  gap: 8px;
+ 
+}
+.NextQuote{
+  color:white;
+  margin-left: auto;
+  font-weight: 400;
+  cursor: pointer;
+  width: 100px;
+  height: 38px;
+  border: none;
+  transition-duration: 500ms;
+  transition-delay: 200ms;
+  }
+.links{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 42px;
+  height: 35px;
+  padding: 4px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.author{
+  display: block;
+  margin-left: auto;
+  margin-right: 10px;
+  margin-bottom: 30px;
+}
+
+
+a,a:hover,a:active{
+  color: white;
+  text-decoration: none;
+}
+.footer{
+  display: flex;
+  align-items: center;
+  color:white;
+  margin:15px auto 30px auto;
+  font-weight: 100;
+  gap: 2px;
+
+}
+
+.invisible{
+display: none;
+ 
+}
+
