--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ font-family: 'Raleway', sans-serif;
 
 }
 .wrapper{
-  width: 550px;
+  width: 450px;
   height: auto;
   background-color: white;
   padding: 40px 50px;
@@ -49,7 +49,7 @@ font-family: 'Raleway', sans-serif;
     opacity: 1; 
     transition: all;
     transition-delay: 0ms;
-    transition-duration: 100ms; ;
+    transition-duration: 600ms; 
 
 }
 
@@ -62,7 +62,7 @@ font-family: 'Raleway', sans-serif;
   height: 38px;
   align-items: center;
   flex-wrap: nowrap;
-  gap: 8px;
+  gap: 4px;
  
 }
 .NextQuote{
@@ -92,6 +92,9 @@ font-family: 'Raleway', sans-serif;
   margin-left: auto;
   margin-right: 10px;
   margin-bottom: 30px;
+  transition-delay: 0ms;
+  transition-duration: 700ms; ;
+
 }
 
 
